[package]
name = "torrent_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22" , features = ["blocking", "json"] }
serde = "1.0.192"
hyper = "1.0.1"
rand = "0.8.5"
serde_bencode = "0.2.4"
structopt = "0.3.26"
indicatif = "0.17.7"
url = "2.4.1"
